--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-NopCommerce" class="navigator-link">
-              <span class="suite-name border-passed">NopCommerce</span>
+              <span class="suite-name border-failed">NopCommerce</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,7 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-NopCommerce" class="hide-methods failed suite-NopCommerce"> (hide)</a> <!-- hide-methods failed suite-NopCommerce -->
+                      <a href="#" panel-name="suite-NopCommerce" class="show-methods failed suite-NopCommerce"> (show)</a> <!-- show-methods failed suite-NopCommerce -->
+                    </span>
+                    <div class="method-list-content failed suite-NopCommerce">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_14_Log_ReportNG" class="method navigator-link" hash-for-method="User_02_Login">User_02_Login</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-NopCommerce -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,11 +117,6 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_14_Log_ReportNG" class="method navigator-link" hash-for-method="User_01_Register">User_01_Register</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_14_Log_ReportNG" class="method navigator-link" hash-for-method="User_02_Login">User_02_Login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-NopCommerce -->
@@ -122,6 +131,26 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-NopCommerce" class="panel NopCommerce">
+          <div class="suite-NopCommerce-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">com.nopcommerce.user.Level_14_Log_ReportNG</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="User_02_Login">
+                  </a> <!-- User_02_Login -->
+                  <span class="method-name">User_02_Login</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [false] but found [true]
+	at commonJquery.BaseTestJquery.verifyFalse(BaseTestJquery.java:158)
+	at com.nopcommerce.user.Level_14_Log_ReportNG.User_02_Login(Level_14_Log_ReportNG.java:87)
+... Removed 29 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-NopCommerce-class-failed -->
           <div class="suite-NopCommerce-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -133,13 +162,6 @@
                   <a name="User_01_Register">
                   </a> <!-- User_01_Register -->
                   <span class="method-name">User_01_Register</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="User_02_Login">
-                  </a> <!-- User_02_Login -->
-                  <span class="method-name">User_02_Login</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -206,16 +228,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'User_01_Register')
 data.setCell(0, 2, 'com.nopcommerce.user.Level_14_Log_ReportNG')
-data.setCell(0, 3, 4837);
+data.setCell(0, 3, 4363);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'User_02_Login')
 data.setCell(1, 2, 'com.nopcommerce.user.Level_14_Log_ReportNG')
-data.setCell(1, 3, 3191);
+data.setCell(1, 3, 2775);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -226,6 +248,48 @@ return data;
             <span class="header-content">Reporter output for NopCommerce</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">User_01_Register</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:25,966] Register - Step 01: Click to Register link
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:26,654] Register - Step 02: Input FirstName to required field 'Thanh'
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:26,892] Register - Step 03: Input LastName to required field 'Nguyen'
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:27,125] Register - Step 04: Input Email to required field 'abc9413@mail.com'
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:27,402] Register - Step 05: Input Password to required field '123456'
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:27,631] Register - Step 06: Input Confirm Password to required field '123456'
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:27,812] Register - Step 07: Click to Register Button
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:29,437] Register - Step 08: Verify Register Success Message
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:29,525] Register - Step 09: Click to Logout Button
+</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">User_02_Login</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:30,328] Login - Step 01: Navigate to Login Button
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:30,968] Login - Step 02: Input Not Found Email to Email Textbox 'abc9413@mail.com'
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:31,210] Login - Step 03:  Input Password TextBox '123456'
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:31,389] Login - Step 04:  Click to Login Button
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:32,150] Login - Step 05:  Verify Login Success
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:32,349] Login - Step 06: Navigate to MyAccoutLink
+</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:33,013] Login - Step 07: Verify Login Success
+</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-NopCommerce" class="panel">
@@ -248,15 +312,17 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">User_01_Register</span>
-                <span class="method-start">3932 ms</span>
+                <span class="method-start">3045 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">User_02_Login</span>
-                <span class="method-start">8771 ms</span>
+                <span class="method-start">7410 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">11963 ms</span>
+                <span class="method-start">10187 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
