--- a/test-output/old/NopCommerce/reporter-output.html
+++ b/test-output/old/NopCommerce/reporter-output.html
@@ -1,1 +1,33 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-11-16 14:56:25,966] Register - Step 01: Click to Register link
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:26,654] Register - Step 02: Input FirstName to required field 'Thanh'
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:26,892] Register - Step 03: Input LastName to required field 'Nguyen'
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:27,125] Register - Step 04: Input Email to required field 'abc9413@mail.com'
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:27,402] Register - Step 05: Input Password to required field '123456'
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:27,631] Register - Step 06: Input Confirm Password to required field '123456'
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:27,812] Register - Step 07: Click to Register Button
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:29,437] Register - Step 08: Verify Register Success Message
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:29,525] Register - Step 09: Click to Logout Button
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:30,328] Login - Step 01: Navigate to Login Button
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:30,968] Login - Step 02: Input Not Found Email to Email Textbox 'abc9413@mail.com'
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:31,210] Login - Step 03:  Input Password TextBox '123456'
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:31,389] Login - Step 04:  Click to Login Button
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:32,150] Login - Step 05:  Verify Login Success
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:32,349] Login - Step 06: Navigate to MyAccoutLink
+</td></tr>
+<tr><td>[INFO ] [2022-11-16 14:56:33,013] Login - Step 07: Verify Login Success
+</td></tr>
+</table>
