--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,30 +9,30 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">NopCommerce</th></tr>
-<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">10,372</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">12,218</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.nopcommerce.user.Level_14_Log_ReportNG</td><td><a href="#m0">User_02_Login</a></td><td rowspan="1">1668585390325</td><td rowspan="1">2775</td></tr><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.nopcommerce.user.Level_14_Log_ReportNG</td><td><a href="#m1">User_01_Register</a></td><td rowspan="1">1668585385960</td><td rowspan="1">4363</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.nopcommerce.user.Level_15_ReportNG_Screenshot</td><td><a href="#m0">User_02_Login</a></td><td rowspan="1">1668675603075</td><td rowspan="1">3092</td></tr><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.nopcommerce.user.Level_15_ReportNG_Screenshot</td><td><a href="#m1">User_01_Register</a></td><td rowspan="1">1668675599275</td><td rowspan="1">3798</td></tr></tbody>
 </table>
-<h2>Run on Firefox</h2><h3 id="m0">com.nopcommerce.user.Level_14_Log_ReportNG#User_02_Login</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-11-16 14:56:30,328] Login - Step 01: Navigate to Login Button
-<br/>[INFO ] [2022-11-16 14:56:30,968] Login - Step 02: Input Not Found Email to Email Textbox 'abc9413@mail.com'
-<br/>[INFO ] [2022-11-16 14:56:31,210] Login - Step 03:  Input Password TextBox '123456'
-<br/>[INFO ] [2022-11-16 14:56:31,389] Login - Step 04:  Click to Login Button
-<br/>[INFO ] [2022-11-16 14:56:32,150] Login - Step 05:  Verify Login Success
-<br/>[INFO ] [2022-11-16 14:56:32,349] Login - Step 06: Navigate to MyAccoutLink
-<br/>[INFO ] [2022-11-16 14:56:33,013] Login - Step 07: Verify Login Success
-</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [false] but found [true]
+<h2>Run on Firefox</h2><h3 id="m0">com.nopcommerce.user.Level_15_ReportNG_Screenshot#User_02_Login</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-11-17 16:00:03,076] Login - Step 01: Navigate to Login Button
+<br/>[INFO ] [2022-11-17 16:00:03,837] Login - Step 02: Input Not Found Email to Email Textbox 'abc4105@mail.com'
+<br/>[INFO ] [2022-11-17 16:00:04,081] Login - Step 03:  Input Password TextBox '123456'
+<br/>[INFO ] [2022-11-17 16:00:04,274] Login - Step 04:  Click to Login Button
+<br/>[INFO ] [2022-11-17 16:00:05,160] Login - Step 05:  Verify Login Success
+<br/>[INFO ] [2022-11-17 16:00:05,354] Login - Step 06: Navigate to MyAccoutLink
+<br/>[INFO ] [2022-11-17 16:00:06,089] Login - Step 07: Verify Login Success
+<br/><br><a href="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_00_06.png"><img src="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_00_06.png" height='100' width='150'/> </a></br></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [false] but found [true]
 	at commonJquery.BaseTestJquery.verifyFalse(BaseTestJquery.java:158)
-	at com.nopcommerce.user.Level_14_Log_ReportNG.User_02_Login(Level_14_Log_ReportNG.java:87)
+	at com.nopcommerce.user.Level_15_ReportNG_Screenshot.User_02_Login(Level_15_ReportNG_Screenshot.java:87)
 ... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.nopcommerce.user.Level_14_Log_ReportNG#User_01_Register</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-11-16 14:56:25,966] Register - Step 01: Click to Register link
-<br/>[INFO ] [2022-11-16 14:56:26,654] Register - Step 02: Input FirstName to required field 'Thanh'
-<br/>[INFO ] [2022-11-16 14:56:26,892] Register - Step 03: Input LastName to required field 'Nguyen'
-<br/>[INFO ] [2022-11-16 14:56:27,125] Register - Step 04: Input Email to required field 'abc9413@mail.com'
-<br/>[INFO ] [2022-11-16 14:56:27,402] Register - Step 05: Input Password to required field '123456'
-<br/>[INFO ] [2022-11-16 14:56:27,631] Register - Step 06: Input Confirm Password to required field '123456'
-<br/>[INFO ] [2022-11-16 14:56:27,812] Register - Step 07: Click to Register Button
-<br/>[INFO ] [2022-11-16 14:56:29,437] Register - Step 08: Verify Register Success Message
-<br/>[INFO ] [2022-11-16 14:56:29,525] Register - Step 09: Click to Logout Button
+<h3 id="m1">com.nopcommerce.user.Level_15_ReportNG_Screenshot#User_01_Register</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-11-17 15:59:59,279] Register - Step 01: Click to Register link
+<br/>[INFO ] [2022-11-17 16:00:00,099] Register - Step 02: Input FirstName to required field 'Thanh'
+<br/>[INFO ] [2022-11-17 16:00:00,311] Register - Step 03: Input LastName to required field 'Nguyen'
+<br/>[INFO ] [2022-11-17 16:00:00,532] Register - Step 04: Input Email to required field 'abc4105@mail.com'
+<br/>[INFO ] [2022-11-17 16:00:00,770] Register - Step 05: Input Password to required field '123456'
+<br/>[INFO ] [2022-11-17 16:00:00,966] Register - Step 06: Input Confirm Password to required field '123456'
+<br/>[INFO ] [2022-11-17 16:00:01,159] Register - Step 07: Click to Register Button
+<br/>[INFO ] [2022-11-17 16:00:02,236] Register - Step 08: Verify Register Success Message
+<br/>[INFO ] [2022-11-17 16:00:02,311] Register - Step 09: Click to Logout Button
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
