--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content failed suite-NopCommerce">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_14_Log_ReportNG" class="method navigator-link" hash-for-method="User_02_Login">User_02_Login</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_15_ReportNG_Screenshot" class="method navigator-link" hash-for-method="User_02_Login">User_02_Login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-NopCommerce -->
@@ -116,7 +116,7 @@
                     <div class="method-list-content passed suite-NopCommerce">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_14_Log_ReportNG" class="method navigator-link" hash-for-method="User_01_Register">User_01_Register</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_15_ReportNG_Screenshot" class="method navigator-link" hash-for-method="User_01_Register">User_01_Register</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-NopCommerce -->
@@ -134,7 +134,7 @@
           <div class="suite-NopCommerce-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.nopcommerce.user.Level_14_Log_ReportNG</span>
+              <span class="class-name">com.nopcommerce.user.Level_15_ReportNG_Screenshot</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -144,7 +144,7 @@
                   <span class="method-name">User_02_Login</span>
                   <div class="stack-trace">java.lang.AssertionError: expected [false] but found [true]
 	at commonJquery.BaseTestJquery.verifyFalse(BaseTestJquery.java:158)
-	at com.nopcommerce.user.Level_14_Log_ReportNG.User_02_Login(Level_14_Log_ReportNG.java:87)
+	at com.nopcommerce.user.Level_15_ReportNG_Screenshot.User_02_Login(Level_15_ReportNG_Screenshot.java:87)
 ... Removed 29 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
@@ -154,7 +154,7 @@
           <div class="suite-NopCommerce-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.nopcommerce.user.Level_14_Log_ReportNG</span>
+              <span class="class-name">com.nopcommerce.user.Level_15_ReportNG_Screenshot</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -178,13 +178,14 @@
 &lt;suite name=&quot;NopCommerce&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;commonJquery.MethodListener&quot;/&gt;
+    &lt;listener class-name=&quot;reportConfig.ReportNGListener&quot;/&gt;
     &lt;listener class-name=&quot;org.uncommons.reportng.HTMLReporter&quot;/&gt;
     &lt;listener class-name=&quot;org.uncommons.reportng.JUnitXMLReporter&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.nopcommerce.user.Level_14_Log_ReportNG&quot;/&gt;
+      &lt;class name=&quot;com.nopcommerce.user.Level_15_ReportNG_Screenshot&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on Firefox --&gt;
 &lt;/suite&gt; &lt;!-- NopCommerce --&gt;
@@ -227,17 +228,17 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'User_01_Register')
-data.setCell(0, 2, 'com.nopcommerce.user.Level_14_Log_ReportNG')
-data.setCell(0, 3, 4363);
+data.setCell(0, 2, 'com.nopcommerce.user.Level_15_ReportNG_Screenshot')
+data.setCell(0, 3, 3798);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'User_02_Login')
-data.setCell(1, 2, 'com.nopcommerce.user.Level_14_Log_ReportNG')
-data.setCell(1, 3, 2775);
+data.setCell(1, 2, 'com.nopcommerce.user.Level_15_ReportNG_Screenshot')
+data.setCell(1, 3, 3092);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -251,43 +252,44 @@ return data;
             <div class="reporter-method-div">
               <span class="reporter-method-name">User_01_Register</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:25,966] Register - Step 01: Click to Register link
+                <span class="reporter-method-output">[INFO ] [2022-11-17 15:59:59,279] Register - Step 01: Click to Register link
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:26,654] Register - Step 02: Input FirstName to required field 'Thanh'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:00,099] Register - Step 02: Input FirstName to required field 'Thanh'
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:26,892] Register - Step 03: Input LastName to required field 'Nguyen'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:00,311] Register - Step 03: Input LastName to required field 'Nguyen'
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:27,125] Register - Step 04: Input Email to required field 'abc9413@mail.com'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:00,532] Register - Step 04: Input Email to required field 'abc4105@mail.com'
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:27,402] Register - Step 05: Input Password to required field '123456'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:00,770] Register - Step 05: Input Password to required field '123456'
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:27,631] Register - Step 06: Input Confirm Password to required field '123456'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:00,966] Register - Step 06: Input Confirm Password to required field '123456'
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:27,812] Register - Step 07: Click to Register Button
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:01,159] Register - Step 07: Click to Register Button
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:29,437] Register - Step 08: Verify Register Success Message
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:02,236] Register - Step 08: Verify Register Success Message
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:29,525] Register - Step 09: Click to Logout Button
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:02,311] Register - Step 09: Click to Logout Button
 </span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">User_02_Login</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:30,328] Login - Step 01: Navigate to Login Button
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:03,076] Login - Step 01: Navigate to Login Button
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:30,968] Login - Step 02: Input Not Found Email to Email Textbox 'abc9413@mail.com'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:03,837] Login - Step 02: Input Not Found Email to Email Textbox 'abc4105@mail.com'
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:31,210] Login - Step 03:  Input Password TextBox '123456'
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:04,081] Login - Step 03:  Input Password TextBox '123456'
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:31,389] Login - Step 04:  Click to Login Button
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:04,274] Login - Step 04:  Click to Login Button
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:32,150] Login - Step 05:  Verify Login Success
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:05,160] Login - Step 05:  Verify Login Success
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:32,349] Login - Step 06: Navigate to MyAccoutLink
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:05,354] Login - Step 06: Navigate to MyAccoutLink
 </span>
-                <span class="reporter-method-output">[INFO ] [2022-11-16 14:56:33,013] Login - Step 07: Verify Login Success
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:06,089] Login - Step 07: Verify Login Success
 </span>
+                <span class="reporter-method-output"><br><a href="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_00_06.png"><img src="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_00_06.png" height='100' width='150'/> </a></br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -305,24 +307,24 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.nopcommerce.user.Level_14_Log_ReportNG</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.nopcommerce.user.Level_15_ReportNG_Screenshot</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">User_01_Register</span>
-                <span class="method-start">3045 ms</span>
+                <span class="method-start">4978 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">User_02_Login</span>
-                <span class="method-start">7410 ms</span>
+                <span class="method-start">8778 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">10187 ms</span>
+                <span class="method-start">12047 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
