--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9ed376">  <td>22/11/16 14:56:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_14_Log_ReportNG.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@5f8e8a9d]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1351478315</td>   <td></td> </tr>
-<tr bgcolor="9ed376">  <td>22/11/16 14:56:25</td>   <td>3040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_14_Log_ReportNG.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@5f8e8a9d]">User_01_Register</td> 
-  <td>main@1351478315</td>   <td></td> </tr>
-<tr bgcolor="9ed376">  <td>22/11/16 14:56:30</td>   <td>7405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_14_Log_ReportNG.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@5f8e8a9d]">User_02_Login</td> 
-  <td>main@1351478315</td>   <td></td> </tr>
-<tr bgcolor="9ed376">  <td>22/11/16 14:56:33</td>   <td>10182</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_14_Log_ReportNG.afterClass()[pri:0, instance:com.nopcommerce.user.Level_14_Log_ReportNG@5f8e8a9d]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1351478315</td>   <td></td> </tr>
+<tr bgcolor="9ed376">  <td>22/11/17 15:59:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_15_ReportNG_Screenshot.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_15_ReportNG_Screenshot@5745ca0e]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508512860</td>   <td></td> </tr>
+<tr bgcolor="9ed376">  <td>22/11/17 15:59:59</td>   <td>4972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_ReportNG_Screenshot.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_15_ReportNG_Screenshot@5745ca0e]">User_01_Register</td> 
+  <td>main@508512860</td>   <td></td> </tr>
+<tr bgcolor="9ed376">  <td>22/11/17 16:00:03</td>   <td>8772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_ReportNG_Screenshot.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_15_ReportNG_Screenshot@5745ca0e]">User_02_Login</td> 
+  <td>main@508512860</td>   <td></td> </tr>
+<tr bgcolor="9ed376">  <td>22/11/17 16:00:06</td>   <td>12041</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_15_ReportNG_Screenshot.afterClass()[pri:0, instance:com.nopcommerce.user.Level_15_ReportNG_Screenshot@5745ca0e]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508512860</td>   <td></td> </tr>
 </table>
