--- a/test-output/old/NopCommerce/reporter-output.html
+++ b/test-output/old/NopCommerce/reporter-output.html
@@ -1,33 +1,34 @@
-<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-11-16 14:56:25,966] Register - Step 01: Click to Register link
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-11-17 15:59:59,279] Register - Step 01: Click to Register link
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:26,654] Register - Step 02: Input FirstName to required field 'Thanh'
+<tr><td>[INFO ] [2022-11-17 16:00:00,099] Register - Step 02: Input FirstName to required field 'Thanh'
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:26,892] Register - Step 03: Input LastName to required field 'Nguyen'
+<tr><td>[INFO ] [2022-11-17 16:00:00,311] Register - Step 03: Input LastName to required field 'Nguyen'
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:27,125] Register - Step 04: Input Email to required field 'abc9413@mail.com'
+<tr><td>[INFO ] [2022-11-17 16:00:00,532] Register - Step 04: Input Email to required field 'abc4105@mail.com'
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:27,402] Register - Step 05: Input Password to required field '123456'
+<tr><td>[INFO ] [2022-11-17 16:00:00,770] Register - Step 05: Input Password to required field '123456'
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:27,631] Register - Step 06: Input Confirm Password to required field '123456'
+<tr><td>[INFO ] [2022-11-17 16:00:00,966] Register - Step 06: Input Confirm Password to required field '123456'
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:27,812] Register - Step 07: Click to Register Button
+<tr><td>[INFO ] [2022-11-17 16:00:01,159] Register - Step 07: Click to Register Button
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:29,437] Register - Step 08: Verify Register Success Message
+<tr><td>[INFO ] [2022-11-17 16:00:02,236] Register - Step 08: Verify Register Success Message
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:29,525] Register - Step 09: Click to Logout Button
+<tr><td>[INFO ] [2022-11-17 16:00:02,311] Register - Step 09: Click to Logout Button
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:30,328] Login - Step 01: Navigate to Login Button
+<tr><td>[INFO ] [2022-11-17 16:00:03,076] Login - Step 01: Navigate to Login Button
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:30,968] Login - Step 02: Input Not Found Email to Email Textbox 'abc9413@mail.com'
+<tr><td>[INFO ] [2022-11-17 16:00:03,837] Login - Step 02: Input Not Found Email to Email Textbox 'abc4105@mail.com'
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:31,210] Login - Step 03:  Input Password TextBox '123456'
+<tr><td>[INFO ] [2022-11-17 16:00:04,081] Login - Step 03:  Input Password TextBox '123456'
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:31,389] Login - Step 04:  Click to Login Button
+<tr><td>[INFO ] [2022-11-17 16:00:04,274] Login - Step 04:  Click to Login Button
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:32,150] Login - Step 05:  Verify Login Success
+<tr><td>[INFO ] [2022-11-17 16:00:05,160] Login - Step 05:  Verify Login Success
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:32,349] Login - Step 06: Navigate to MyAccoutLink
+<tr><td>[INFO ] [2022-11-17 16:00:05,354] Login - Step 06: Navigate to MyAccoutLink
 </td></tr>
-<tr><td>[INFO ] [2022-11-16 14:56:33,013] Login - Step 07: Verify Login Success
+<tr><td>[INFO ] [2022-11-17 16:00:06,089] Login - Step 07: Verify Login Success
 </td></tr>
+<tr><td><br><a href="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_00_06.png"><img src="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_00_06.png" height='100' width='150'/> </a></br></td></tr>
 </table>
