--- a/test-output/index.html
+++ b/test-output/index.html
@@ -143,7 +143,6 @@
                   </a> <!-- User_02_Login -->
                   <span class="method-name">User_02_Login</span>
                   <div class="stack-trace">java.lang.AssertionError: expected [false] but found [true]
-	at commonJquery.BaseTestJquery.verifyFalse(BaseTestJquery.java:158)
 	at com.nopcommerce.user.Level_15_ReportNG_Screenshot.User_02_Login(Level_15_ReportNG_Screenshot.java:87)
 ... Removed 29 stack frames
 </div> <!-- stack-trace -->
@@ -229,11 +228,11 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'User_01_Register')
 data.setCell(0, 2, 'com.nopcommerce.user.Level_15_ReportNG_Screenshot')
-data.setCell(0, 3, 3798);
+data.setCell(0, 3, 3662);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'User_02_Login')
 data.setCell(1, 2, 'com.nopcommerce.user.Level_15_ReportNG_Screenshot')
-data.setCell(1, 3, 3092);
+data.setCell(1, 3, 2870);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
@@ -252,44 +251,44 @@ return data;
             <div class="reporter-method-div">
               <span class="reporter-method-name">User_01_Register</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-11-17 15:59:59,279] Register - Step 01: Click to Register link
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:00,099] Register - Step 02: Input FirstName to required field 'Thanh'
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:00,311] Register - Step 03: Input LastName to required field 'Nguyen'
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:00,532] Register - Step 04: Input Email to required field 'abc4105@mail.com'
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:00,770] Register - Step 05: Input Password to required field '123456'
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:00,966] Register - Step 06: Input Confirm Password to required field '123456'
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:01,159] Register - Step 07: Click to Register Button
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:02,236] Register - Step 08: Verify Register Success Message
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:02,311] Register - Step 09: Click to Logout Button
-</span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:25,272] Register - Step 01: Click to Register link
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:25,975] Register - Step 02: Input FirstName to required field 'Thanh'
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:26,204] Register - Step 03: Input LastName to required field 'Nguyen'
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:26,441] Register - Step 04: Input Email to required field 'abc9398@mail.com'
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:26,696] Register - Step 05: Input Password to required field '123456'
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:26,912] Register - Step 06: Input Confirm Password to required field '123456'
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:27,118] Register - Step 07: Click to Register Button
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:28,067] Register - Step 08: Verify Register Success Message
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:28,152] Register - Step 09: Click to Logout Button
+<br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">User_02_Login</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:03,076] Login - Step 01: Navigate to Login Button
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:03,837] Login - Step 02: Input Not Found Email to Email Textbox 'abc4105@mail.com'
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:04,081] Login - Step 03:  Input Password TextBox '123456'
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:04,274] Login - Step 04:  Click to Login Button
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:05,160] Login - Step 05:  Verify Login Success
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:05,354] Login - Step 06: Navigate to MyAccoutLink
-</span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:00:06,089] Login - Step 07: Verify Login Success
-</span>
-                <span class="reporter-method-output"><br><a href="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_00_06.png"><img src="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_00_06.png" height='100' width='150'/> </a></br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:28,927] Login - Step 01: Navigate to Login Button
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:29,610] Login - Step 02: Input Not Found Email to Email Textbox 'abc9398@mail.com'
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:29,865] Login - Step 03:  Input Password TextBox '123456'
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:30,075] Login - Step 04:  Click to Login Button
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:30,870] Login - Step 05:  Verify Login Success
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:31,065] Login - Step 06: Navigate to MyAccoutLink
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:31,713] Login - Step 07: Verify Login Success
+<br></span>
+                <span class="reporter-method-output"><br><a href="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_08_31.png"><img src="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_08_31.png" height='100' width='150'/> </a></br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -314,17 +313,17 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">User_01_Register</span>
-                <span class="method-start">4978 ms</span>
+                <span class="method-start">3088 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">User_02_Login</span>
-                <span class="method-start">8778 ms</span>
+                <span class="method-start">6752 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">12047 ms</span>
+                <span class="method-start">9790 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
