--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,29 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">NopCommerce</th></tr>
-<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">9,932</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">11,811</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.nopcommerce.user.Level_15_ReportNG_Screenshot</td><td><a href="#m0">User_02_Login</a></td><td rowspan="1">1668676108925</td><td rowspan="1">2870</td></tr><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.nopcommerce.user.Level_15_ReportNG_Screenshot</td><td><a href="#m1">User_01_Register</a></td><td rowspan="1">1668676105261</td><td rowspan="1">3662</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.nopcommerce.user.Level_16_ExtentV2_Screenshot</td><td><a href="#m0">User_02_Login</a></td><td rowspan="1">1669004627335</td><td rowspan="1">3021</td></tr><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.nopcommerce.user.Level_16_ExtentV2_Screenshot</td><td><a href="#m1">User_01_Register</a></td><td rowspan="1">1669004622869</td><td rowspan="1">4463</td></tr></tbody>
 </table>
-<h2>Run on Firefox</h2><h3 id="m0">com.nopcommerce.user.Level_15_ReportNG_Screenshot#User_02_Login</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-11-17 16:08:28,927] Login - Step 01: Navigate to Login Button
-<br><br/>[INFO ] [2022-11-17 16:08:29,610] Login - Step 02: Input Not Found Email to Email Textbox 'abc9398@mail.com'
-<br><br/>[INFO ] [2022-11-17 16:08:29,865] Login - Step 03:  Input Password TextBox '123456'
-<br><br/>[INFO ] [2022-11-17 16:08:30,075] Login - Step 04:  Click to Login Button
-<br><br/>[INFO ] [2022-11-17 16:08:30,870] Login - Step 05:  Verify Login Success
-<br><br/>[INFO ] [2022-11-17 16:08:31,065] Login - Step 06: Navigate to MyAccoutLink
-<br><br/>[INFO ] [2022-11-17 16:08:31,713] Login - Step 07: Verify Login Success
-<br><br/><br><a href="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_08_31.png"><img src="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_08_31.png" height='100' width='150'/> </a></br></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [false] but found [true]
-	at com.nopcommerce.user.Level_15_ReportNG_Screenshot.User_02_Login(Level_15_ReportNG_Screenshot.java:87)
+<h2>Run on Firefox</h2><h3 id="m0">com.nopcommerce.user.Level_16_ExtentV2_Screenshot#User_02_Login</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_02_Login(java.lang.reflect.Method)</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [false] but found [true]
+	at com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_02_Login(Level_16_ExtentV2_Screenshot.java:95)
 ... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.nopcommerce.user.Level_15_ReportNG_Screenshot#User_01_Register</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-11-17 16:08:25,272] Register - Step 01: Click to Register link
-<br><br/>[INFO ] [2022-11-17 16:08:25,975] Register - Step 02: Input FirstName to required field 'Thanh'
-<br><br/>[INFO ] [2022-11-17 16:08:26,204] Register - Step 03: Input LastName to required field 'Nguyen'
-<br><br/>[INFO ] [2022-11-17 16:08:26,441] Register - Step 04: Input Email to required field 'abc9398@mail.com'
-<br><br/>[INFO ] [2022-11-17 16:08:26,696] Register - Step 05: Input Password to required field '123456'
-<br><br/>[INFO ] [2022-11-17 16:08:26,912] Register - Step 06: Input Confirm Password to required field '123456'
-<br><br/>[INFO ] [2022-11-17 16:08:27,118] Register - Step 07: Click to Register Button
-<br><br/>[INFO ] [2022-11-17 16:08:28,067] Register - Step 08: Verify Register Success Message
-<br><br/>[INFO ] [2022-11-17 16:08:28,152] Register - Step 09: Click to Logout Button
+<h3 id="m1">com.nopcommerce.user.Level_16_ExtentV2_Screenshot#User_01_Register</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_01_Register(java.lang.reflect.Method)</td></tr><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-11-21 11:23:44,221] Register - Step 04: Input Email to required field 'abc5026@mail.com'
 <br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
