--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content failed suite-NopCommerce">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_15_ReportNG_Screenshot" class="method navigator-link" hash-for-method="User_02_Login">User_02_Login</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_16_ExtentV2_Screenshot" class="method navigator-link" hash-for-method="User_02_Login(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_02_Login(java.lang.reflect.Method...)">User_02_Login(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_02_Login(java.lang.reflect.Method...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-NopCommerce -->
@@ -116,7 +116,7 @@
                     <div class="method-list-content passed suite-NopCommerce">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_15_ReportNG_Screenshot" class="method navigator-link" hash-for-method="User_01_Register">User_01_Register</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_16_ExtentV2_Screenshot" class="method navigator-link" hash-for-method="User_01_Register(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_01_Register(java.lang.reflect.Met...)">User_01_Register(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_01_Register(java.lang.reflect.Met...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-NopCommerce -->
@@ -134,16 +134,17 @@
           <div class="suite-NopCommerce-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.nopcommerce.user.Level_15_ReportNG_Screenshot</span>
+              <span class="class-name">com.nopcommerce.user.Level_16_ExtentV2_Screenshot</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="User_02_Login">
-                  </a> <!-- User_02_Login -->
+                  <a name="User_02_Login(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_02_Login(java.lang.reflect.Method...)">
+                  </a> <!-- User_02_Login(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_02_Login(java.lang.reflect.Method...) -->
                   <span class="method-name">User_02_Login</span>
+                  <span class="parameters">(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_02_Login(java.lang.reflect.Method))</span>
                   <div class="stack-trace">java.lang.AssertionError: expected [false] but found [true]
-	at com.nopcommerce.user.Level_15_ReportNG_Screenshot.User_02_Login(Level_15_ReportNG_Screenshot.java:87)
+	at com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_02_Login(Level_16_ExtentV2_Screenshot.java:95)
 ... Removed 29 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
@@ -153,14 +154,15 @@
           <div class="suite-NopCommerce-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.nopcommerce.user.Level_15_ReportNG_Screenshot</span>
+              <span class="class-name">com.nopcommerce.user.Level_16_ExtentV2_Screenshot</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="User_01_Register">
-                  </a> <!-- User_01_Register -->
+                  <a name="User_01_Register(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_01_Register(java.lang.reflect.Met...)">
+                  </a> <!-- User_01_Register(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_01_Register(java.lang.reflect.Met...) -->
                   <span class="method-name">User_01_Register</span>
+                  <span class="parameters">(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_01_Register(java.lang.reflect.Method))</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -177,14 +179,14 @@
 &lt;suite name=&quot;NopCommerce&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;commonJquery.MethodListener&quot;/&gt;
-    &lt;listener class-name=&quot;reportConfig.ReportNGListener&quot;/&gt;
+    &lt;listener class-name=&quot;reportConfig.ExtentReportListenerV2&quot;/&gt;
     &lt;listener class-name=&quot;org.uncommons.reportng.HTMLReporter&quot;/&gt;
     &lt;listener class-name=&quot;org.uncommons.reportng.JUnitXMLReporter&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.nopcommerce.user.Level_15_ReportNG_Screenshot&quot;/&gt;
+      &lt;class name=&quot;com.nopcommerce.user.Level_16_ExtentV2_Screenshot&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on Firefox --&gt;
 &lt;/suite&gt; &lt;!-- NopCommerce --&gt;
@@ -227,17 +229,17 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'User_01_Register')
-data.setCell(0, 2, 'com.nopcommerce.user.Level_15_ReportNG_Screenshot')
-data.setCell(0, 3, 3662);
+data.setCell(0, 2, 'com.nopcommerce.user.Level_16_ExtentV2_Screenshot')
+data.setCell(0, 3, 4463);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'User_02_Login')
-data.setCell(1, 2, 'com.nopcommerce.user.Level_15_ReportNG_Screenshot')
-data.setCell(1, 3, 2870);
+data.setCell(1, 2, 'com.nopcommerce.user.Level_16_ExtentV2_Screenshot')
+data.setCell(1, 3, 3021);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -249,46 +251,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">User_01_Register</span>
+              <span class="reporter-method-name">User_01_Register(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_01_Register(java.lang.reflect.Met...)</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:25,272] Register - Step 01: Click to Register link
+                <span class="reporter-method-output">[INFO ] [2022-11-21 11:23:44,221] Register - Step 04: Input Email to required field 'abc5026@mail.com'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:25,975] Register - Step 02: Input FirstName to required field 'Thanh'
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:26,204] Register - Step 03: Input LastName to required field 'Nguyen'
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:26,441] Register - Step 04: Input Email to required field 'abc9398@mail.com'
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:26,696] Register - Step 05: Input Password to required field '123456'
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:26,912] Register - Step 06: Input Confirm Password to required field '123456'
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:27,118] Register - Step 07: Click to Register Button
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:28,067] Register - Step 08: Verify Register Success Message
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:28,152] Register - Step 09: Click to Logout Button
-<br></span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">User_02_Login</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:28,927] Login - Step 01: Navigate to Login Button
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:29,610] Login - Step 02: Input Not Found Email to Email Textbox 'abc9398@mail.com'
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:29,865] Login - Step 03:  Input Password TextBox '123456'
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:30,075] Login - Step 04:  Click to Login Button
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:30,870] Login - Step 05:  Verify Login Success
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:31,065] Login - Step 06: Navigate to MyAccoutLink
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-11-17 16:08:31,713] Login - Step 07: Verify Login Success
-<br></span>
-                <span class="reporter-method-output"><br><a href="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_08_31.png"><img src="data:image/png;base64,D:\eclipse_Workspace\Framework\reportNGImages\User_02_Login_17_11_2022_04_08_31.png" height='100' width='150'/> </a></br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -306,24 +272,24 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.nopcommerce.user.Level_15_ReportNG_Screenshot</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.nopcommerce.user.Level_16_ExtentV2_Screenshot</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">User_01_Register</span>
-                <span class="method-start">3088 ms</span>
+                <span class="method-name">User_01_Register(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_01_Register(java.lang.reflect.Met...)</span>
+                <span class="method-start">3902 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">User_02_Login</span>
-                <span class="method-start">6752 ms</span>
+                <span class="method-name">User_02_Login(public void com.nopcommerce.user.Level_16_ExtentV2_Screenshot.User_02_Login(java.lang.reflect.Method...)</span>
+                <span class="method-start">8368 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">9790 ms</span>
+                <span class="method-start">11574 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
