--- a/test-output/old/NopCommerce/methods-alphabetical.html
+++ b/test-output/old/NopCommerce/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9ed376">  <td>22/11/17 16:08:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_ReportNG_Screenshot.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_15_ReportNG_Screenshot@5745ca0e]">User_01_Register</td> 
-  <td>main@508512860</td>   <td></td> </tr>
-<tr bgcolor="9ed376">  <td>22/11/17 16:08:28</td>   <td>3664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_15_ReportNG_Screenshot.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_15_ReportNG_Screenshot@5745ca0e]">User_02_Login</td> 
-  <td>main@508512860</td>   <td></td> </tr>
-<tr bgcolor="9ed376">  <td>22/11/17 16:08:31</td>   <td>6702</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_15_ReportNG_Screenshot.afterClass()[pri:0, instance:com.nopcommerce.user.Level_15_ReportNG_Screenshot@5745ca0e]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508512860</td>   <td></td> </tr>
-<tr bgcolor="9ed376">  <td>22/11/17 16:08:22</td>   <td>-3080</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_15_ReportNG_Screenshot.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_15_ReportNG_Screenshot@5745ca0e]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508512860</td>   <td></td> </tr>
+<tr bgcolor="e8c3cb">  <td>22/11/21 11:23:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_ExtentV2_Screenshot.User_01_Register(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.Level_16_ExtentV2_Screenshot@55cb6996]">User_01_Register</td> 
+  <td>main@530539368</td>   <td></td> </tr>
+<tr bgcolor="e8c3cb">  <td>22/11/21 11:23:47</td>   <td>4466</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_16_ExtentV2_Screenshot.User_02_Login(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.Level_16_ExtentV2_Screenshot@55cb6996]">User_02_Login</td> 
+  <td>main@530539368</td>   <td></td> </tr>
+<tr bgcolor="e8c3cb">  <td>22/11/21 11:23:50</td>   <td>7672</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_16_ExtentV2_Screenshot.afterClass()[pri:0, instance:com.nopcommerce.user.Level_16_ExtentV2_Screenshot@55cb6996]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@530539368</td>   <td></td> </tr>
+<tr bgcolor="e8c3cb">  <td>22/11/21 11:23:38</td>   <td>-3894</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_16_ExtentV2_Screenshot.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_16_ExtentV2_Screenshot@55cb6996]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@530539368</td>   <td></td> </tr>
 </table>
