--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-NopCommerce" class="navigator-link ">
-                    <span>E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runNopComMerceTest.xml</span>
+                    <span>E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runNopComMerceTestAllure.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content failed suite-NopCommerce">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_17_ExtentV3_Screenshot" class="method navigator-link" hash-for-method="User_02_Login(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method...)">User_02_Login(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_18_Allure" class="method navigator-link" hash-for-method="User_02_Login">User_02_Login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-NopCommerce -->
@@ -116,7 +116,7 @@
                     <div class="method-list-content passed suite-NopCommerce">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_17_ExtentV3_Screenshot" class="method navigator-link" hash-for-method="User_01_Register(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Met...)">User_01_Register(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Met...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_18_Allure" class="method navigator-link" hash-for-method="User_01_Register">User_01_Register</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-NopCommerce -->
@@ -134,17 +134,16 @@
           <div class="suite-NopCommerce-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.nopcommerce.user.Level_17_ExtentV3_Screenshot</span>
+              <span class="class-name">com.nopcommerce.user.Level_18_Allure</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="User_02_Login(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method...)">
-                  </a> <!-- User_02_Login(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method...) -->
+                  <a name="User_02_Login">
+                  </a> <!-- User_02_Login -->
                   <span class="method-name">User_02_Login</span>
-                  <span class="parameters">(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method))</span>
                   <div class="stack-trace">java.lang.AssertionError: expected [false] but found [true]
-	at com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(Level_17_ExtentV3_Screenshot.java:95)
+	at com.nopcommerce.user.Level_18_Allure.User_02_Login(Level_18_Allure.java:96)
 ... Removed 29 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
@@ -154,15 +153,14 @@
           <div class="suite-NopCommerce-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.nopcommerce.user.Level_17_ExtentV3_Screenshot</span>
+              <span class="class-name">com.nopcommerce.user.Level_18_Allure</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="User_01_Register(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Met...)">
-                  </a> <!-- User_01_Register(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Met...) -->
+                  <a name="User_01_Register">
+                  </a> <!-- User_01_Register -->
                   <span class="method-name">User_01_Register</span>
-                  <span class="parameters">(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Method))</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -170,7 +168,7 @@
         </div> <!-- panel NopCommerce -->
         <div panel-name="test-xml-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runNopComMerceTest.xml</span>
+            <span class="header-content">E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runNopComMerceTestAllure.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -179,14 +177,12 @@
 &lt;suite name=&quot;NopCommerce&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;commonJquery.MethodListener&quot;/&gt;
-    &lt;listener class-name=&quot;reportConfig.ExtentTestListenerV3&quot;/&gt;
-    &lt;listener class-name=&quot;org.uncommons.reportng.HTMLReporter&quot;/&gt;
-    &lt;listener class-name=&quot;org.uncommons.reportng.JUnitXMLReporter&quot;/&gt;
+    &lt;listener class-name=&quot;reportConfig.AllureTestListener&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.nopcommerce.user.Level_17_ExtentV3_Screenshot&quot;/&gt;
+      &lt;class name=&quot;com.nopcommerce.user.Level_18_Allure&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on Firefox --&gt;
 &lt;/suite&gt; &lt;!-- NopCommerce --&gt;
@@ -229,12 +225,12 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'User_01_Register')
-data.setCell(0, 2, 'com.nopcommerce.user.Level_17_ExtentV3_Screenshot')
-data.setCell(0, 3, 3415);
+data.setCell(0, 2, 'com.nopcommerce.user.Level_18_Allure')
+data.setCell(0, 3, 3233);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'User_02_Login')
-data.setCell(1, 2, 'com.nopcommerce.user.Level_17_ExtentV3_Screenshot')
-data.setCell(1, 3, 2044);
+data.setCell(1, 2, 'com.nopcommerce.user.Level_18_Allure')
+data.setCell(1, 3, 2136);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
@@ -265,24 +261,28 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.nopcommerce.user.Level_17_ExtentV3_Screenshot</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.nopcommerce.user.Level_18_Allure</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">initBeforeSuite</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass(chrome)</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">19 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">User_01_Register(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Met...)</span>
-                <span class="method-start">3364 ms</span>
+                <span class="method-name">User_01_Register</span>
+                <span class="method-start">3134 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">User_02_Login(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method...)</span>
-                <span class="method-start">6785 ms</span>
+                <span class="method-name">User_02_Login</span>
+                <span class="method-start">6410 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">8960 ms</span>
+                <span class="method-start">8622 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
