--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e2bb6b">  <td>22/11/21 23:27:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_17_ExtentV3_Screenshot.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_17_ExtentV3_Screenshot@b83a9be]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312963234</td>   <td></td> </tr>
-<tr bgcolor="e2bb6b">  <td>22/11/21 23:27:29</td>   <td>3360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.Level_17_ExtentV3_Screenshot@b83a9be]">User_01_Register</td> 
-  <td>main@1312963234</td>   <td></td> </tr>
-<tr bgcolor="e2bb6b">  <td>22/11/21 23:27:33</td>   <td>6781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method)[pri:0, instance:com.nopcommerce.user.Level_17_ExtentV3_Screenshot@b83a9be]">User_02_Login</td> 
-  <td>main@1312963234</td>   <td></td> </tr>
-<tr bgcolor="e2bb6b">  <td>22/11/21 23:27:35</td>   <td>8956</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_17_ExtentV3_Screenshot.afterClass()[pri:0, instance:com.nopcommerce.user.Level_17_ExtentV3_Screenshot@b83a9be]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312963234</td>   <td></td> </tr>
+<tr bgcolor="bbf9b3">  <td>22/11/28 22:17:50</td>   <td>0</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_18_Allure@74a6f9c1]">&gt;&gt;initBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@565839681</td>   <td></td> </tr>
+<tr bgcolor="aa86b4">  <td>22/11/28 22:17:50</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_18_Allure.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_18_Allure@74a6f9c1]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@565839681</td>   <td></td> </tr>
+<tr bgcolor="aa86b4">  <td>22/11/28 22:17:53</td>   <td>3132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_18_Allure.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_18_Allure@74a6f9c1]">User_01_Register</td> 
+  <td>main@565839681</td>   <td></td> </tr>
+<tr bgcolor="aa86b4">  <td>22/11/28 22:17:56</td>   <td>6408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_18_Allure.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_18_Allure@74a6f9c1]">User_02_Login</td> 
+  <td>main@565839681</td>   <td></td> </tr>
+<tr bgcolor="aa86b4">  <td>22/11/28 22:17:58</td>   <td>8620</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_18_Allure.afterClass()[pri:0, instance:com.nopcommerce.user.Level_18_Allure@74a6f9c1]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@565839681</td>   <td></td> </tr>
 </table>
