--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">NopCommerce</th></tr>
-<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">9,201</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Run on Chrome</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">9,359</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.nopcommerce.user.Level_18_Allure</td><td><a href="#m0">User_02_Login</a></td><td rowspan="1">1669648676653</td><td rowspan="1">2136</td></tr><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.nopcommerce.user.Level_18_Allure</td><td><a href="#m1">User_01_Register</a></td><td rowspan="1">1669648673377</td><td rowspan="1">3233</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Chrome &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.nopcommerce.user.Level_18_Allure</td><td><a href="#m0">User_02_Login</a></td><td rowspan="1">1669649154110</td><td rowspan="1">2005</td></tr><tr><th colspan="4">Run on Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.nopcommerce.user.Level_18_Allure</td><td><a href="#m1">User_01_Register</a></td><td rowspan="1">1669649150862</td><td rowspan="1">3175</td></tr></tbody>
 </table>
-<h2>Run on Firefox</h2><h3 id="m0">com.nopcommerce.user.Level_18_Allure#User_02_Login</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [false] but found [true]
+<h2>Run on Chrome</h2><h3 id="m0">com.nopcommerce.user.Level_18_Allure#User_02_Login</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [false] but found [true]
 	at com.nopcommerce.user.Level_18_Allure.User_02_Login(Level_18_Allure.java:96)
 ... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.nopcommerce.user.Level_18_Allure#User_01_Register</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
