--- a/test-output/old/NopCommerce/methods-alphabetical.html
+++ b/test-output/old/NopCommerce/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aa86b4">  <td>22/11/28 22:17:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_18_Allure.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_18_Allure@74a6f9c1]">User_01_Register</td> 
-  <td>main@565839681</td>   <td></td> </tr>
-<tr bgcolor="aa86b4">  <td>22/11/28 22:17:56</td>   <td>3276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_18_Allure.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_18_Allure@74a6f9c1]">User_02_Login</td> 
-  <td>main@565839681</td>   <td></td> </tr>
-<tr bgcolor="aa86b4">  <td>22/11/28 22:17:58</td>   <td>5488</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_18_Allure.afterClass()[pri:0, instance:com.nopcommerce.user.Level_18_Allure@74a6f9c1]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@565839681</td>   <td></td> </tr>
-<tr bgcolor="aa86b4">  <td>22/11/28 22:17:50</td>   <td>-3113</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_18_Allure.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_18_Allure@74a6f9c1]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@565839681</td>   <td></td> </tr>
-<tr bgcolor="bbf9b3">  <td>22/11/28 22:17:50</td>   <td>-3132</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_18_Allure@74a6f9c1]">&gt;&gt;initBeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@565839681</td>   <td></td> </tr>
+<tr bgcolor="dd8087">  <td>22/11/28 22:25:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_18_Allure.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_18_Allure@7f08caf]">User_01_Register</td> 
+  <td>main@749362556</td>   <td></td> </tr>
+<tr bgcolor="dd8087">  <td>22/11/28 22:25:54</td>   <td>3248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_18_Allure.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_18_Allure@7f08caf]">User_02_Login</td> 
+  <td>main@749362556</td>   <td></td> </tr>
+<tr bgcolor="dd8087">  <td>22/11/28 22:25:56</td>   <td>5391</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_18_Allure.afterClass()[pri:0, instance:com.nopcommerce.user.Level_18_Allure@7f08caf]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@749362556</td>   <td></td> </tr>
+<tr bgcolor="dd8087">  <td>22/11/28 22:25:47</td>   <td>-3341</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_18_Allure.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_18_Allure@7f08caf]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@749362556</td>   <td></td> </tr>
+<tr bgcolor="929bbd">  <td>22/11/28 22:25:47</td>   <td>-3374</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_18_Allure@7f08caf]">&gt;&gt;initBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@749362556</td>   <td></td> </tr>
 </table>
