--- a/test-output/html/output.html
+++ b/test-output/html/output.html
@@ -15,44 +15,12 @@
   </p>
 
   <div id="log">
-<<<<<<< HEAD
-                  [INFO ] [2022-11-17 22:11:06,222] Register - Step 01: Click to Register link
-<br>
-                        [INFO ] [2022-11-17 22:11:07,486] Register - Step 02: Input FirstName to required field 'Thanh'
-<br>
-                        [INFO ] [2022-11-17 22:11:07,599] Register - Step 03: Input LastName to required field 'Nguyen'
-<br>
-                        [INFO ] [2022-11-17 22:11:07,705] Register - Step 04: Input Email to required field 'abc3846@mail.com'
-<br>
-                        [INFO ] [2022-11-17 22:11:07,807] Register - Step 05: Input Password to required field '123456'
-<br>
-                        [INFO ] [2022-11-17 22:11:07,910] Register - Step 06: Input Confirm Password to required field '123456'
-<br>
-                        [INFO ] [2022-11-17 22:11:08,004] Register - Step 07: Click to Register Button
-<br>
-                        [INFO ] [2022-11-17 22:11:08,913] Register - Step 08: Verify Register Success Message
-<br>
-                        [INFO ] [2022-11-17 22:11:08,959] Register - Step 09: Click to Logout Button
-<br>
-                        [INFO ] [2022-11-17 22:11:09,587] Login - Step 01: Navigate to Login Button
-<br>
-                        [INFO ] [2022-11-17 22:11:10,137] Login - Step 02: Input Not Found Email to Email Textbox 'abc3846@mail.com'
-<br>
-                        [INFO ] [2022-11-17 22:11:10,232] Login - Step 03:  Input Password TextBox '123456'
-<br>
-                        [INFO ] [2022-11-17 22:11:10,321] Login - Step 04:  Click to Login Button
-<br>
-                        [INFO ] [2022-11-17 22:11:10,946] Login - Step 05:  Verify Login Success
-<br>
-                        [INFO ] [2022-11-17 22:11:11,029] Login - Step 06: Navigate to MyAccoutLink
-<br>
-                        [INFO ] [2022-11-17 22:11:11,536] Login - Step 07: Verify Login Success
-<br>
-                        <br><a href="data:image/png;base64,E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\reportNGImages\User_02_Login_17_11_2022_10_11_11.png"><img src="data:image/png;base64,E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\reportNGImages\User_02_Login_17_11_2022_10_11_11.png" height='100' width='150'/> </a></br>
-=======
-                  [INFO ] [2022-11-21 11:23:44,221] Register - Step 04: Input Email to required field &apos;abc5026@mail.com&apos;<br/>
+                  [INFO ] [2022-12-01 15:48:44,666] Pre-Condition - Step 01: Navigate to Login Button<br/>
 &lt;br&gt;<br />
->>>>>>> branch 'master' of https://github.com/xecoiia1/hybrid-framework-nopcommerce.git
+                        [INFO ] [2022-12-01 15:48:45,484] Pre-Condition - Step 02: Set Cookies and reload page<br/>
+&lt;br&gt;<br />
+                        [INFO ] [2022-12-01 15:48:49,001] Pre-Condition - Step 03:&nbsp; Verify Login Success<br/>
+&lt;br&gt;<br />
             </div>
 
 </body>
