--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-NopCommerce" class="navigator-link">
-              <span class="suite-name border-failed">NopCommerce</span>
+              <span class="suite-name border-passed">NopCommerce</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,21 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-NopCommerce" class="hide-methods failed suite-NopCommerce"> (hide)</a> <!-- hide-methods failed suite-NopCommerce -->
-                      <a href="#" panel-name="suite-NopCommerce" class="show-methods failed suite-NopCommerce"> (show)</a> <!-- show-methods failed suite-NopCommerce -->
-                    </span>
-                    <div class="method-list-content failed suite-NopCommerce">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_17_ExtentV3_Screenshot" class="method navigator-link" hash-for-method="User_02_Login(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method...)">User_02_Login(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-NopCommerce -->
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -116,7 +102,32 @@
                     <div class="method-list-content passed suite-NopCommerce">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_17_ExtentV3_Screenshot" class="method navigator-link" hash-for-method="User_01_Register(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Met...)">User_01_Register(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Met...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_19_Share_Data_C" class="method navigator-link" hash-for-method="Search_01_Empty_Data">Search_01_Empty_Data</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_19_Share_Data_C" class="method navigator-link" hash-for-method="Search_02_Relative_Product_Name">Search_02_Relative_Product_Name</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_19_Share_Data_C" class="method navigator-link" hash-for-method="Search_03_Absolute_Product_Name">Search_03_Absolute_Product_Name</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_19_Share_Data_C" class="method navigator-link" hash-for-method="Search_04_Parent_Category">Search_04_Parent_Category</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_19_Share_Data_C" class="method navigator-link" hash-for-method="Search_05_Incorect_Manufactorer">Search_05_Incorect_Manufactorer</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_19_Share_Data_C" class="method navigator-link" hash-for-method="Search_06_Corect_Manufactorer">Search_06_Corect_Manufactorer</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-NopCommerce -->
@@ -131,38 +142,52 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-NopCommerce" class="panel NopCommerce">
-          <div class="suite-NopCommerce-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.nopcommerce.user.Level_17_ExtentV3_Screenshot</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="User_02_Login(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method...)">
-                  </a> <!-- User_02_Login(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method...) -->
-                  <span class="method-name">User_02_Login</span>
-                  <span class="parameters">(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method))</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [false] but found [true]
-	at com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(Level_17_ExtentV3_Screenshot.java:93)
-... Removed 29 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-NopCommerce-class-failed -->
           <div class="suite-NopCommerce-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.nopcommerce.user.Level_17_ExtentV3_Screenshot</span>
+              <span class="class-name">com.nopcommerce.user.Level_19_Share_Data_C</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="User_01_Register(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Met...)">
-                  </a> <!-- User_01_Register(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Met...) -->
-                  <span class="method-name">User_01_Register</span>
-                  <span class="parameters">(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Method))</span>
+                  <a name="Search_01_Empty_Data">
+                  </a> <!-- Search_01_Empty_Data -->
+                  <span class="method-name">Search_01_Empty_Data</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Search_02_Relative_Product_Name">
+                  </a> <!-- Search_02_Relative_Product_Name -->
+                  <span class="method-name">Search_02_Relative_Product_Name</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Search_03_Absolute_Product_Name">
+                  </a> <!-- Search_03_Absolute_Product_Name -->
+                  <span class="method-name">Search_03_Absolute_Product_Name</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Search_04_Parent_Category">
+                  </a> <!-- Search_04_Parent_Category -->
+                  <span class="method-name">Search_04_Parent_Category</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Search_05_Incorect_Manufactorer">
+                  </a> <!-- Search_05_Incorect_Manufactorer -->
+                  <span class="method-name">Search_05_Incorect_Manufactorer</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Search_06_Corect_Manufactorer">
+                  </a> <!-- Search_06_Corect_Manufactorer -->
+                  <span class="method-name">Search_06_Corect_Manufactorer</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -186,7 +211,8 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.nopcommerce.user.Level_17_ExtentV3_Screenshot&quot;/&gt;
+      &lt;class name=&quot;com.nopcommerce.common.Common_01_Cookies&quot;/&gt;
+      &lt;class name=&quot;com.nopcommerce.user.Level_19_Share_Data_C&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on Firefox --&gt;
 &lt;/suite&gt; &lt;!-- NopCommerce --&gt;
@@ -200,7 +226,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Run on Firefox (1 class)</span>
+                <span class="test-name">Run on Firefox (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -226,20 +252,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'User_01_Register')
-data.setCell(0, 2, 'com.nopcommerce.user.Level_17_ExtentV3_Screenshot')
-data.setCell(0, 3, 3924);
+data.setCell(0, 1, 'Search_01_Empty_Data')
+data.setCell(0, 2, 'com.nopcommerce.user.Level_19_Share_Data_C')
+data.setCell(0, 3, 125);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'User_02_Login')
-data.setCell(1, 2, 'com.nopcommerce.user.Level_17_ExtentV3_Screenshot')
-data.setCell(1, 3, 2955);
+data.setCell(1, 1, 'Search_02_Relative_Product_Name')
+data.setCell(1, 2, 'com.nopcommerce.user.Level_19_Share_Data_C')
+data.setCell(1, 3, 8);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'Search_05_Incorect_Manufactorer')
+data.setCell(2, 2, 'com.nopcommerce.user.Level_19_Share_Data_C')
+data.setCell(2, 3, 5);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'Search_03_Absolute_Product_Name')
+data.setCell(3, 2, 'com.nopcommerce.user.Level_19_Share_Data_C')
+data.setCell(3, 3, 5);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'Search_04_Parent_Category')
+data.setCell(4, 2, 'com.nopcommerce.user.Level_19_Share_Data_C')
+data.setCell(4, 3, 3);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'Search_06_Corect_Manufactorer')
+data.setCell(5, 2, 'com.nopcommerce.user.Level_19_Share_Data_C')
+data.setCell(5, 3, 2);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 148 ms</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -254,9 +296,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-NopCommerce" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.nopcommerce.user.Level_19_Share_Data_C</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">initBeforeSuite</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-NopCommerce" class="panel">
@@ -265,29 +314,57 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.nopcommerce.user.Level_17_ExtentV3_Screenshot</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.nopcommerce.common.Common_01_Cookies</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">initBeforeSuite</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
+              <div class="configuration-test before">
+                <span class="method-name">Register(chrome)</span>
+                <span class="method-start">23 ms</span>
+              </div> <!-- configuration-test before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.nopcommerce.user.Level_19_Share_Data_C</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass(chrome)</span>
-                <span class="method-start">24 ms</span>
+                <span class="method-start">11944 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">User_01_Register(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_01_Register(java.lang.reflect.Met...)</span>
-                <span class="method-start">6076 ms</span>
+                <span class="method-name">Search_01_Empty_Data</span>
+                <span class="method-start">18938 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">User_02_Login(public void com.nopcommerce.user.Level_17_ExtentV3_Screenshot.User_02_Login(java.lang.reflect.Method...)</span>
-                <span class="method-start">10083 ms</span>
+                <span class="method-name">Search_02_Relative_Product_Name</span>
+                <span class="method-start">19212 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Search_03_Absolute_Product_Name</span>
+                <span class="method-start">19223 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Search_04_Parent_Category</span>
+                <span class="method-start">19236 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Search_05_Incorect_Manufactorer</span>
+                <span class="method-start">19243 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Search_06_Corect_Manufactorer</span>
+                <span class="method-start">19253 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">16216 ms</span>
+                <span class="method-start">19258 ms</span>
               </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.nopcommerce.common.Common_01_Cookies</div> <!-- chronological-class-name -->
+              <div class="configuration-test after">
+                <span class="method-name">afterClass</span>
+                <span class="method-start">19462 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
